# ros2systemd

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  package.xml  pyproject.toml  pytest.ini  setup.cfg  setup.py
docs/: DESIGN.md  ROADMAP.md
ros2_systemd/api/: systemd_manager.py
ros2_systemd/command/: systemd.py
ros2_systemd/verb/: __init__.py  create.py  diagnose.py  disable.py  enable.py  list.py  logs.py  remove.py  restart.py  start.py  status.py  stop.py  template.py
ros2systemd/api/: systemd_manager.py
ros2systemd/verb/: create.py  diagnose.py  launch.py  logs.py  run.py  start.py  status.py
tests/: test_copyright.py  test_flake8.py  test_integration.py  test_launch_verb.py  test_pep257.py  test_run_verb.py  test_systemd_manager.py  test_templates.py
