[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2systemd"
version = "0.5.1"
description = "ROS2 command extension for managing launches and nodes as systemd services"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jerry Lin", email = "jerry73204@gmail.com"}
]
maintainers = [
    {name = "Jerry Lin", email = "jerry73204@gmail.com"}
]
keywords = ["ros2", "systemd", "service", "daemon", "node", "launch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "setuptools",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/jerry73204/ros2systemd"
"Bug Reports" = "https://github.com/jerry73204/ros2systemd/issues"
Source = "https://github.com/jerry73204/ros2systemd"
Documentation = "https://github.com/jerry73204/ros2systemd#readme"

[project.entry-points."ros2cli.command"]
systemd = "ros2systemd.command.systemd:SystemdCommand"

[project.entry-points."ros2cli.extension_point"]
"ros2systemd.verb" = "ros2systemd.verb:VerbExtension"

[project.entry-points."ros2systemd.verb"]
create = "ros2systemd.verb.create:CreateVerb"
start = "ros2systemd.verb.start:StartVerb"
stop = "ros2systemd.verb.stop:StopVerb"
restart = "ros2systemd.verb.restart:RestartVerb"
status = "ros2systemd.verb.status:StatusVerb"
enable = "ros2systemd.verb.enable:EnableVerb"
disable = "ros2systemd.verb.disable:DisableVerb"
list = "ros2systemd.verb.list:ListVerb"
remove = "ros2systemd.verb.remove:RemoveVerb"
template = "ros2systemd.verb.template:TemplateVerb"
logs = "ros2systemd.verb.logs:LogsVerb"
diagnose = "ros2systemd.verb.diagnose:DiagnoseVerb"
run = "ros2systemd.verb.run:RunVerb"
launch = "ros2systemd.verb.launch:LaunchVerb"

[tool.setuptools.packages.find]
exclude = ["test*", "tests*"]
